--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-animatable",
-  "version": "0.2.0",
-  "description": "Standard set of easy to use animations for React Native",
+  "version": "0.3.0",
+  "description": "Standard set of easy to use animations and declarative transitions for React Native",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +15,11 @@
     "ios",
     "android",
     "ui",
+    "fade",
+    "bounce",
+    "slide",
     "animatable",
+    "transition",
     "animation"
   ],
   "author": {
