Removes `react-native` from peerDependencies.

--- a/package.json
+++ b/package.json
@@ -34,8 +34,5 @@
     "type": "git",
     "url": "git://github.com/oblador/react-native-animatable.git"
   },
-  "license": "MIT",
-  "peerDependencies": {
-    "react-native": ">=0.8.0 || 0.8.0-rc || 0.8.0-rc.2 || 0.9.0-rc || 0.10.0-rc || 0.11.0-rc || 0.12.0-rc || 0.13.0-rc || 0.14.0-rc || 0.15.0-rc || 0.16.0-rc || 0.17.0-rc"
-  }
+  "license": "MIT"
 }
