--- a/Example/package.json
+++ b/Example/package.json
@@ -6,8 +6,9 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.19.0",
+    "react": "^0.14.8",
+    "react-native": "^0.25.1",
     "react-native-animatable": "file:../",
-    "react-native-collapsible": "^0.5.5"
+    "react-native-collapsible": "^0.6.0"
   }
 }
