--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Easy to use declarative transitions and a standard set of animations for React Native",
   "main": "index.js",
   "scripts": {
-    "test": "eslint ./*.js"
+    "jest": "jest",
+    "jest:watch": "npm run jest -- --watch",
+    "lint": "eslint ./*.js",
+    "test": "npm run lint && npm run jest"
   },
   "keywords": [
     "react-native",
@@ -35,6 +38,14 @@
     "url": "git://github.com/oblador/react-native-animatable.git"
   },
   "license": "MIT",
+  "jest": {
+    "preset": "jest-react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/Example/",
+      "<rootDir>/node_modules/react-native/Libraries/react-native/",
+      "<rootDir>/node_modules/react-native/packager/"
+    ]
+  },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-eslint": "^7.0.0",
@@ -45,5 +56,11 @@
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
+    "jest": "17.0.2",
+    "jest-cli": "17.0.2",
+    "jest-react-native": "17.0.3",
+    "react": "~15.3.2",
+    "react-native": "^0.36.1",
+    "react-test-renderer": "15.3.2"
   }
 }
