--- a/Example/package.json
+++ b/Example/package.json
@@ -7,18 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.3.2",
-    "react-native": "0.36.1",
+    "react": "15.4.1",
+    "react-native": "0.38.0",
     "react-native-animatable": "file:../"
   },
   "jest": {
-    "preset": "jest-react-native"
+    "preset": "react-native"
   },
   "devDependencies": {
-    "babel-jest": "16.0.0",
+    "babel-jest": "17.0.2",
     "babel-preset-react-native": "1.9.0",
-    "jest": "16.0.2",
-    "jest-react-native": "16.1.0",
-    "react-test-renderer": "15.3.2"
+    "jest": "17.0.3",
+    "react-test-renderer": "15.4.1"
   }
 }
