--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-animatable",
-  "version": "0.6.1",
-  "description": "Easy to use declarative transitions and a standard set of animations for React Native",
+  "version": "1.0.0",
+  "description": "Easy to use declarative transitions and animations for React Native",
   "main": "index.js",
   "scripts": {
     "jest": "jest",
