--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Easy to use declarative transitions and animations for React Native",
   "main": "index.js",
   "scripts": {
-    "jest": "jest",
+    "jest": "./node_modules/.bin/jest",
     "jest:watch": "npm run jest -- --watch",
-    "lint": "eslint ./*.js",
-    "test": "npm run lint && npm run jest"
+    "lint": "./node_modules/.bin/eslint ./*.js",
+    "test": "npm run lint && npm run jest",
+    "format": "./node_modules/.bin/prettier --single-quote --trailing-comma es5 --write {,definitions/,__tests__}*.js"
   },
   "keywords": [
     "react-native",
@@ -59,6 +60,7 @@
     "jest": "17.0.2",
     "jest-cli": "17.0.2",
     "jest-react-native": "17.0.3",
+    "prettier": "^1.3.1",
     "react": "~15.3.2",
     "react-native": "^0.36.1",
     "react-test-renderer": "15.3.2"
