--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/no-extraneous-dependencies": [0],
     "import/no-unresolved": [2, { ignore: ['^react(-native)?$'] }],
-    "import/extensions": [2, { "js": "never", "json": "always" }]
+    "import/extensions": [2, { "js": "never", "json": "always" }],
+    "arrow-parens": ["error", "as-needed"]
   }
 }
