Migrate deprecated React.PropTypes (#134)
* migrate deprecated React.PropTypes

* Replace React.PropTypes with 'prop-types'

--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "react": "*",
     "react-native": "*",
     "react-test-renderer": "15.5.4"
+  },
+  "dependencies": {
+    "prop-types": "^15.5.10"
   }
 }
