--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-native-animatable",
   "version": "1.2.3",
   "description": "Easy to use declarative transitions and animations for React Native",
+  "typings": "typings/react-native-animatable.d.ts",
   "main": "index.js",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
